refactor(gui): simplify summary panel for better developer experience